<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_top_category" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_bg_category" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_40"
        android:padding="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_24"
        android:text="@string/done"
        android:textSize="@dimen/sp_14"
        android:theme="@style/WhiteText"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_100"
        android:text="@string/welcome_to_flutter_test"
        android:textSize="@dimen/sp_22"
        android:theme="@style/WhiteText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvContent"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_10"
        android:fontFamily="@font/lato_400"
        android:text="@string/please_select_categories_what_you_would_like_to_see_on_your_feed_you_can_set_this_later_on_filter"
        android:textColor="@color/white_82"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategory"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tvContent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:spanCount="3"
        tools:itemCount="30"
        tools:listitem="@layout/item_category" />

</androidx.constraintlayout.widget.ConstraintLayout>